--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,24 @@
-# Ignore node_modules directory
-node_modules/
-
-# Ignore build output
-dist/
-build/
-
-# Ignore environment variables
-.env
-
-# Ignore lock files
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
-
-# Ignore TypeScript build info
-*.tsbuildinfo
-
-# Ignore logs
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Ignore temporary directories
-.tmp/
-temp/
+node_modules
+dist
+dist-ssr
+*.local
 
-# Ignore IDE-specific files
-.vscode/
-.idea/
-
-# Ignore Mac system files
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-
-# Ignore public folder contents, except index.html
-public/*
-!public/index.html
-
-# Ignore Tailwind-generated artifacts
-postcss.config.js
-tailwind.config.js
-
-# Ignore specific files
-tsconfig.json
-tsconfig.app.json
-tsconfig.node.json
-
-# Ignore ESLint and Vite config artifacts
-eslint.config.js
-vite.config.ts
-
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
