--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.0",
     "styled-components": "^5.3.10",
     "swiper": "^11.1.14",
     "yup": "^1.4.0"
