--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "homepage": "https://github.com/ZsAnku1234/mydreamfy-frontend.git",
+  
+  "homepage": "https://ZsAnku1234.github.io/mydreamfy-frontend"
   "name": "eduapp-frontend",
   "private": true,
   "version": "0.0.0",
