--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   
-  "homepage": "https://ZsAnku1234.github.io/mydreamfy-frontend"
+  "homepage": "https://ZsAnku1234.github.io/mydreamfy-frontend",
   "name": "eduapp-frontend",
   "private": true,
   "version": "0.0.0",
